--- a/css/design.css
+++ b/css/design.css
@@ -1,164 +1,226 @@
 :root {
-    --c0: #be28b9;
-    --c1: #51239f;
-    --c2: #510062;
-    --c3: #be008d;
+  /* --c0: #be28b9; */
+  --c0: #10605f;
+  --c1: #51239f;
+  --c2: #510062;
+  /* --c3: #be008d; */
+  --c3: #1e8c2e;
 
-    --padding: 3ex;
-    --site-width: 120ex;
+  --padding: 3ex;
+  --site-width: 120ex;
 
-    color: white;
-    font-family: Arial, Helvetica, sans-serif;
+  color: white;
+  font-family: Arial, Helvetica, sans-serif;
 }
 
-*, *:before, *:after {
-    -webkit-box-sizing: inherit;
-    -moz-box-sizing: inherit;
-    box-sizing: inherit;
-}
-
-a {
-    color: white;
-}
-
-a:hover {
-    text-decoration: none;
-}
-
-main > details[open] + article {
-    display: none;
+*,
+*:before,
+*:after {
+  -webkit-box-sizing: inherit;
+  -moz-box-sizing: inherit;
+  box-sizing: inherit;
 }
 
 body {
-    margin: 0;
-    padding: 0;
+  margin: 0 auto;
+  max-width: var(--site-width);
+
+  & a {
+    color: #eee;
+    text-decoration: none;
+
+    &:hover {
+      text-decoration: underline;
+    }
+  }
 }
 
-footer > div {
+footer {
+  & > div {
     column-gap: var(--padding);
     display: grid;
     grid-template-areas: "friends myself";
     grid-template-columns: 3fr 1fr;
     grid-template-rows: auto;
-}
 
-footer > div section:first-child {
-    grid-area: myself;
-    text-align: right;
-}
+    & section:first-child {
+      grid-area: myself;
+      text-align: right;
+    }
 
-footer > div section:last-child {
-    grid-area: friends;
-}
+    & footer > div section:last-child {
+      grid-area: friends;
+    }
 
-footer ul {
+    & header {
+      backdrop-filter: blur(10px);
+      background: white;
+      background-color: rgba(0, 0, 0, 0.4);
+      border-bottom: 1px solid white;
+      color: white;
+      padding: 1px;
+      position: relative;
+      z-index: 998;
+    }
+  }
+
+  & ul {
     padding: 0;
+
+    & li {
+      display: inline;
+      white-space: nowrap;
+    }
+  }
 }
 
-footer ul li {
-    display: inline;
-    white-space: nowrap;
-}
-
-header {
-    backdrop-filter: blur(10px);
-    background: white;
-    background-color: rgba(0, 0, 0, 0.4);
-    border-bottom: 1px solid white;
-    color: white;
-    padding: 1px;
-    position: relative;
-    z-index: 998;
-}
-
-header a {
-    color: white;
-    text-decoration: none;
-}
-
-header h1 {
-    margin: 1ex;
+html,
+body {
+  height: 100vh;
 }
 
 html {
-    --xy: calc(50% - 30em) 12em;
-    --b: -60deg;
-    --a: 140deg;
-    
-    background: 
-        linear-gradient(transparent 70%, rgba(0, 0, 0, 0.7)),
-        conic-gradient(
-            from
-            var(--b) at var(--xy), 
-            var(--c0) var(--a),
-            var(--c1) 0% 50%, 
-            var(--c2) 0% calc(180deg + var(--a)),
-            var(--c3) 0%
-        );
-    background-attachment: fixed;
+  --xy: calc(50% - 30em) 12em;
+  --b: -60deg;
+  --a: 140deg;
 
-    -webkit-box-sizing: border-box;
-    -moz-box-sizing: border-box;
-    box-sizing: border-box;
-}
+  background: linear-gradient(transparent 10%, rgba(100, 100, 100, 0.8)),
+    repeating-radial-gradient(
+      circle at bottom left,
+      #fedc00 0,
+      #fedc00 5.5555555556%,
+      #fcb712 0,
+      #fcb712 11.1111111111%,
+      #f7921e 0,
+      #f7921e 16.6666666667%,
+      #e87f24 0,
+      #e87f24 22.2222222222%,
+      #dd6227 0,
+      #dd6227 27.7777777778%,
+      #dc4c27 0,
+      #dc4c27 33.3333333333%,
+      #ca3435 0,
+      #ca3435 38.8888888889%,
+      #b82841 0,
+      #b82841 44.4444444444%,
+      #953751 0,
+      #953751 50%,
+      #364c88 0,
+      #364c88 55.5555555556%,
+      #16599d 0,
+      #16599d 61.1111111111%,
+      #02609e 0,
+      #02609e 66.6666666667%,
+      #0073a9 0,
+      #0073a9 72.2222222222%,
+      #008aa4 0,
+      #008aa4 77.7777777778%,
+      #239a87 0,
+      #239a87 83.3333333333%,
+      #7cba6d 0,
+      #7cba6d 88.8888888889%,
+      #becc2f 0,
+      #becc2f 94.4444444444%,
+      #e0d81d 0,
+      #e0d81d 100%
+    ),
+    repeating-radial-gradient(
+      circle at bottom right,
+      #fedc00 0,
+      #fedc00 5.5555555556%,
+      #fcb712 0,
+      #fcb712 11.1111111111%,
+      #f7921e 0,
+      #f7921e 16.6666666667%,
+      #e87f24 0,
+      #e87f24 22.2222222222%,
+      #dd6227 0,
+      #dd6227 27.7777777778%,
+      #dc4c27 0,
+      #dc4c27 33.3333333333%,
+      #ca3435 0,
+      #ca3435 38.8888888889%,
+      #b82841 0,
+      #b82841 44.4444444444%,
+      #953751 0,
+      #953751 50%,
+      #364c88 0,
+      #364c88 55.5555555556%,
+      #16599d 0,
+      #16599d 61.1111111111%,
+      #02609e 0,
+      #02609e 66.6666666667%,
+      #0073a9 0,
+      #0073a9 72.2222222222%,
+      #008aa4 0,
+      #008aa4 77.7777777778%,
+      #239a87 0,
+      #239a87 83.3333333333%,
+      #7cba6d 0,
+      #7cba6d 88.8888888889%,
+      #becc2f 0,
+      #becc2f 94.4444444444%,
+      #e0d81d 0,
+      #e0d81d 100%
+    );
+  background-attachment: fixed;
+  background-blend-mode: overlay;
 
-main {
-    backdrop-filter: blur(20px) brightness(200%) contrast(25%) saturate(200%);
-    background-color: rgba(255, 255, 255, 0.5);
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+
+  & main {
+    /* backdrop-filter: blur(20px) brightness(200%) contrast(25%) saturate(200%); */
+    backdrop-filter: blur(20px);
+    background-color: rgba(255, 255, 255, 0.7);
     color: #444;
-    padding: 0 var(--padding) var(--padding);
+    padding: 1px var(--padding) var(--padding);
+  }
 }
 
-ol, ul {
-    padding-left: 3ex;
-}
-
-ol[data-challenges] li details,
-ol[data-challenges] li span {
-    display: block;
-    padding: 1ex;
-}
-
-ol[data-challenges] li summary {
-    cursor: pointer;
-}
-
-ol[data-challenges] li summary::marker {
-    content: "";
-}
-
-ol[data-challenges] li {
+[data-challenges] {
+  & li {
     background: rgba(255, 255, 255, 0.5);
     border-radius: 5px;
     margin: 4px;
     padding: 1px;
     transition: background 300ms;
-}
 
-ol[data-challenges] li:hover:not(.current),
-ol[data-challenges] li:target:not(.current) {
-    background: rgba(255, 255, 255, 0.8);
-}
+    &:hover:not(.current),
+    &:target:not(.current) {
+      background: rgba(255, 255, 255, 0.8);
+    }
 
-ol[data-challenges] p {
+    &.complete {
+      color: #999;
+    }
+
+    &.current {
+      background: var(--c0);
+      color: #eee;
+
+      &:hover {
+        background: var(--c3);
+      }
+    }
+
+    & details,
+    & span {
+      display: block;
+      padding: 1ex;
+    }
+
+    & summary {
+      cursor: pointer;
+
+      &::marker {
+        content: "";
+      }
+    }
+  }
+
+  & p {
     margin-bottom: 0;
-}
-
-ol[data-challenges] .complete {
-    color: #999;
-}
-
-ol[data-challenges] .current {
-    background: var(--c0);
-    color: white;
-    font-weight: bold;
-}
-
-ol[data-challenges] .current:hover {
-    background: var(--c3);
-}
-
-.container {
-    margin: 0 auto;
-    max-width: var(--site-width);
+  }
 }
